--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     new JMLink({
       jmlink: 'https://bd5wab.jmlk.co/AAyZ',
-      button: document.querySelector('#btnOpenApp'),
+      button: document.querySelector('a#btnOpenApp'),
       inapp: true,
       params: {
         name: 'zs'
