--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a id="btnOpenApp">打开APP</a>
   <script>
     new JMLink({
-      jmlink: 'https://bd5wab.jmlk.co/AAyZ',
+      jmlink: 'https://bd5wab.jgshare.cn/AAyZ',
       button: document.querySelector('a#btnOpenApp'),
       inapp: true,
       params: {
